changed to twitter font

--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -34,7 +34,7 @@ nav {
   }
   
   h1 {
-    font-family: 'Bebas Neue';
+    font-family: 'Helvetica Neue';
     color: white;
     font-size: 25px;
   }
@@ -44,7 +44,7 @@ nav {
   }
   
   a {
-    font-family: 'Georgia, serif';
+    font-family: 'Helvetica Neue';
     font-size: 25px;
     color: #f5f3f3;
   }
