--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,25 @@
 .tweets {
-  
   width: 80vmin;
 }
 
 .background {
   background-color: #1b9cef;
- 
 }
+
+
+
+.App-logo {
+  height: 50vmin;
+  width: 50vmin;
+
+}
+
+.logoBox {
+  /* border-radius: 5px;
+  border-style: solid;
+  border-width: 5px; */
+  
+ 
+  
+}
+
